--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#platform :ios, '9.0'
 
 target 'ajite' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -7,6 +7,7 @@ target 'ajite' do
   use_modular_headers!
   # Pods for ajite
   pod 'Firebase/Analytics'
+  pod 'Firebase/Core'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
