--- a/ajite/ajite/Info.plist
+++ b/ajite/ajite/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>made.otf</string>
+	</array>
 </dict>
 </plist>
