--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -6,8 +6,10 @@ target 'ajite' do
   #use_frameworks!
   use_modular_headers!
   # Pods for ajite
+  pod 'Firebase/Auth'
   pod 'Firebase/Analytics'
   pod 'Firebase/Core'
+  pod 'GoogleSignIn', '~> 5.0'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
