--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -15,6 +15,7 @@ target 'ajite' do
   pod 'GoogleSignIn', '~> 5.0'
   pod "youtube-ios-player-helper", "~> 1.0.2"
   pod "GoogleAPIClientForREST/YouTube"
+  pod 'Firebase/Messaging'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
