--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -16,6 +16,7 @@ target 'ajite' do
   pod "youtube-ios-player-helper", "~> 1.0.2"
   pod "GoogleAPIClientForREST/YouTube"
   pod 'Firebase/Messaging'
+  pod 'KakaoSDK'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
