카카오 로그인 추가 및 로그인 관련 코드 정리

--- a/ajite/ajite/Info.plist
+++ b/ajite/ajite/Info.plist
@@ -26,9 +26,22 @@
 				<string>com.googleusercontent.apps.761858142230-os6em0bmnottmm6os74na59nao7n1pg1</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakao4d77205fd48a3dd4e5d0393637255814</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
