--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -13,7 +13,7 @@ target 'ajite' do
   pod 'Firebase/Firestore'
   #pod 'FirebaseFirestoreSwift'
   pod 'GoogleSignIn', '~> 5.0'
-  pod "youtube-ios-player-helper", "~> 1.0.2"
+  pod "youtube-ios-player-helper"
   pod "GoogleAPIClientForREST/YouTube"
   pod 'Firebase/Messaging'
   pod 'KakaoSDK'
