naveridlogin-sdk-ios 추가
naveridlogin-sdk-ios 추가

--- a/ajite/Podfile
+++ b/ajite/Podfile
@@ -17,6 +17,7 @@ target 'ajite' do
   pod "GoogleAPIClientForREST/YouTube"
   pod 'Firebase/Messaging'
   pod 'KakaoSDK'
+  pod 'naveridlogin-sdk-ios'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
